--- a/app/views/index.html
+++ b/app/views/index.html
@@ -22,6 +22,14 @@
           <li><a href="/journeys/invite/step1">Invite user journey</a> </li>
           <li><a href="/journeys/migration/step1">Whitelisted migration journey</a> </li>
         </ul>
+        <h2 class="heading-medium">Help desk</h2>
+        <ul>
+          <li><a href="/journeys/helpdesk/users-search-results">Users - search results</a> </li>
+        </ul>
+        <h2 class="heading-medium">Concepts</h2>
+        <ul>
+          <li><a href="/concepts/password/strength">Password strength</a> </li>
+        </ul>
       </div>
       <div class="col-6">
         <h2 class="heading-medium">Examples</h2>
