Added JS table sort

--- a/app/views/journeys/helpdesk/users-search-results.html
+++ b/app/views/journeys/helpdesk/users-search-results.html
@@ -24,7 +24,7 @@
 
 <p>Showing 6 users</p>
 
-<table class="table-font-xsmall">
+<table class="table-font-xsmall sortable">
   <thead>
     <tr>
       <th scope="col">Name</th>
@@ -43,7 +43,7 @@
       <td>Active</td>
     </tr>
     <tr>
-      <td>James King</td>
+      <td>Adam King</td>
       <td>james@king.com</td>
       <td>Coventry</td>
       <td>12:17 11/01/2018</td>
