--- a/src/sass/_help.scss
+++ b/src/sass/_help.scss
@@ -31,6 +31,9 @@
     margin-bottom: 5px;
     font-size: 16px;
     min-width: 150px;
+    &.long {
+      min-width: 300px;
+    }
     &:before {
       content: "";
       left:10px;
