--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -44,19 +44,15 @@
 
   {% if hideHeader != true %}
 
-  <header role="banner" id="global-header" class="with-proposition">
+  <header role="banner" id="global-header" class="">
     <div class="header-wrapper">
       <div class="header-global">
         <div class="header-logo">
           <a href="https://www.gov.uk" title="Go to the GOV.UK homepage" id="logo" class="content">
-            <img src="https://rawgit.com/DFE-Digital/dfe.ui.toolkit/master/dist/images/gov.uk_logotype_crown_invert_trans.png" width="36" height="32" alt=""> GOV.UK
+            <img src="https://assets.publishing.service.gov.uk/static/gov.uk_logotype_crown_invert_trans-203e1db49d3eff430d7dc450ce723c1002542fe1d2bce661b6d8571f14c1043c.png" width="36" height="32" alt=""> GOV.UK
           </a>
         </div>
-      </div>
-      <div class="header-proposition">
-        <div class="content">
-          <span id="proposition-name">DfE sign in</span>
-        </div>
+        <h1 class="header-title">DfE Sign In</h1>
       </div>
     </div>
   </header>
@@ -66,7 +62,7 @@
       <div class="service-info">
         <div class="phase-banner-beta">
           <p>
-            <strong class="phase-tag">ALPHA</strong>
+            <strong class="phase-tag">BETA</strong>
             <span>This is a new service – your <a href="#" target="_blank">feedback</a> will help us to improve it. </span>
           </p>
         </div>
