--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -52,7 +52,7 @@
             <img src="https://assets.publishing.service.gov.uk/static/gov.uk_logotype_crown_invert_trans-203e1db49d3eff430d7dc450ce723c1002542fe1d2bce661b6d8571f14c1043c.png" width="36" height="32" alt=""> GOV.UK
           </a>
         </div>
-        <h1 class="header-title">DfE Sign In</h1>
+        <h1 class="header-title">DfE Sign-in</h1>
       </div>
     </div>
   </header>
