--- a/src/sass/_help.scss
+++ b/src/sass/_help.scss
@@ -7,7 +7,7 @@
 
 .toggletip {
   position: relative;
-  button {
+  button, a {
     font-weight:700;
     font-size: 16px;
     background: $govuk-blue;
@@ -19,6 +19,12 @@
     line-height: 1.5em !important;
     margin: 0.25em;
     padding: 0 .4em;
+    display: inline-block;
+    text-decoration: none;
+  }
+  a {
+    height: 1.2em;
+    line-height: 1.4 !important;
   }
   .bubble {
     background: $black;
