--- a/app/views/concepts/password/new.html
+++ b/app/views/concepts/password/new.html
@@ -116,7 +116,7 @@
           if (pwdTest.score < 3) {
             $('#pwd-score').html('<span class="icon icon-warning"></span> ' + pwdTest.feedback.warning);
           } else {
-            $('#pwd-score').html('<span class="icon icon-success"></span> That's a secure password');
+            $('#pwd-score').html('<span class="icon icon-success"></span> Good password');
           }
         }
 
@@ -138,22 +138,23 @@
 
   .password-strength {
     font-size: 16px;
-    margin: 0;
-    padding: 10px 0;
+    margin: 3px 0 0;
+    padding: 5px 0 0;
     position: relative;
   }
 
   .icon {
-    width: 8px;
-    height: 1.2em;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
     background: #006435;
     position: absolute;
-    top: 10px;
+    top: 9px;
     left: 0;
   }
 
   #pwd-score {
-    padding-left: 15px;
+    padding-left: 18px;
   }
 
   .icona {
@@ -172,7 +173,7 @@
 
   #pwd-scores {
     position: relative;
-    padding-left: 15px;
+    padding-left: 20px;
     padding-top: 10px;
     display: block;
   }
