Changed the green

--- a/app/views/concepts/password/new.html
+++ b/app/views/concepts/password/new.html
@@ -147,7 +147,7 @@
     width: 12px;
     height: 12px;
     border-radius: 50%;
-    background: #006435;
+    background: #00823b;
     position: absolute;
     top: 9px;
     left: 0;
