--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -8,8 +8,10 @@
 @import "typography";
 @import "notifications";
 @import "header";
+@import "navigation";
 @import "footer";
 @import "help";
+@import "support";
 
 @import "pages/services";
 
