--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -1,10 +1,22 @@
 .main-nav {
   border-bottom: 1px solid $border-colour;
+  nav {
+    @include media(1020px) {
+      margin: 0 auto;
+      max-width: 960px
+    }
+  }
   ul {
     @extend %contain-floats;
     list-style: none;
     position: relative;
     bottom: -1px;
+    @include media(tablet) {
+      margin: 0 15px;
+    }
+    @include media(1020px) {
+      margin: 0 -15px;
+    }
   }
   li {
     border-bottom: 1px solid $border-colour;
