Styling for support console

--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -159,6 +159,7 @@ div.show-password {
 .search-form {
   position: relative;
   padding-left: 35px;
+  margin-bottom: 20px;
   button {
     position: absolute;
     width: 30px;
@@ -172,5 +173,57 @@ div.show-password {
   input {
     border: none;
     border-bottom: 1px solid $black;
+    padding: 7px 0;
+    min-width: 300px;
+  }
+}
+
+.search-field {
+  position: relative;
+  margin-bottom: 15px;
+  .search-input {
+    padding: 0 40px 0 0;
+    input {
+      border-radius: 0;
+      font-size: 16px;
+      font-weight: 400;
+      width: 100%;
+      padding: 0 0 0 10px;
+      display: block;
+      height: 40px;
+      border-color: $black;
+      border-right: none;
+      line-height: 38px;
+    }
+  }
+  .search-submit {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 40px;
+    width: 40px;
+    overflow: visible;
+    button {
+      border-radius: 0;
+      box-shadow: none;
+      position: absolute;
+      z-index: 4;
+      right: 0;
+      top: 0;
+      width: 40px;
+      height: 40px;
+      border: none;
+      overflow: hidden;
+      text-indent: -5000px;
+      color: #fff;
+      background-color: $green;
+      background-image: url("../images/search-icon.svg");
+      background-repeat: no-repeat;
+      background-size: 20px 20px;
+      background-position: 9px 9px;
+    }
+  }
+  label {
+    display: block;
   }
 }
