--- a/src/sass/_support.scss
+++ b/src/sass/_support.scss
@@ -1,5 +1,15 @@
 .support {
   #global-header {
     border-bottom: 10px solid $govuk-blue;
+    .header-wrapper {
+      padding-top: 5px;
+      padding-bottom: 1px;
+      .identity {
+        color: $grey-2;
+        b {
+          color: #fff
+        }
+      }
+    }
   }
 }
