--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -52,7 +52,7 @@
 }
 
 aside {
-  border-top: 5px solid $department-for-education-websafe;
+  border-top: 5px solid $govuk-blue;
   padding-top: 15px;
   margin-top: 15px;
   > h2.heading-medium {
