--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -53,7 +53,6 @@
   }
 }
 
-
 ul.tabs {
   list-style: none;
   border: 1px solid $border-colour;
@@ -83,6 +82,36 @@ ul.tabs {
     @include media(tablet) {
       border-color: $border-colour;
       border-bottom-color: #fff;
+    }
+  }
+}
+
+.pagination {
+  @extend %contain-floats;
+  margin-top: -10px;
+  margin-bottom: 20px;
+  li {
+    float: left;
+    text-align: center;
+    margin-right: 10px;
+    a, span.current {
+      display: block;
+      min-width: 1em;
+    }
+    span.current {
+      font-weight: bold;
+    }
+  }
+}
+
+@include media(tablet) {
+  .pagination {
+    float: right;
+    margin-top: .26316em;
+    margin-bottom: 1.05263em;
+    li {
+      margin-left: 10px;
+      margin-right: 0;
     }
   }
 }
