JS and styles for removing waiting page when logging in

--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -141,6 +141,9 @@ div.show-password {
 
 .button-secondary {
   @include button($grey-3);
+  &[disabled="disabled"] {
+    background-color: $grey-3;
+  }
 }
 
 .submit-buttons {
