--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -165,6 +165,6 @@ img.responsive {
 img.spacing {
   margin: 20px 0;
   @include media(tablet) {
-    margin: 20px;
+    margin: 30px 20px;
   }
 }
