Styles for confirmation box

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -168,3 +168,10 @@ img.spacing {
     margin: 30px 20px;
   }
 }
+
+.govuk-box-highlight {
+  padding: 1.5em;
+  h1.heading-xlarge {
+    margin: 0.5em 0;
+  }
+}
