--- a/src/sass/_notifications.scss
+++ b/src/sass/_notifications.scss
@@ -19,6 +19,10 @@ $warning: $orange;
     padding-right: 30px;
     a {
       color:#fff;
+      &:hover {
+        color: #fff;
+        text-decoration: none;
+      }
     }
   }
   &:focus {
