--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -68,6 +68,10 @@ form {
   }
 }
 
+form.inline {
+  display: inline-block;
+}
+
 @for $i from 4 through 12 {
   .char-width-#{$i} {
     width: #{$i}em;
@@ -143,6 +147,19 @@ div.show-password {
   @include button($grey-3);
   &[disabled="disabled"] {
     background-color: $grey-3;
+  }
+}
+
+.button-text {
+  font: inherit;
+  background: none;
+  border: none;
+  padding: 0;
+  text-decoration: underline;
+  margin: 0;
+  color:#fff;
+  &:hover {
+    text-decoration: none;
   }
 }
 
