--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -158,6 +158,7 @@ div.show-password {
   text-decoration: underline;
   margin: 0;
   color:#fff;
+  cursor: pointer;
   &:hover {
     text-decoration: none;
   }
