--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -75,3 +75,46 @@ nav.subnav {
   0%, 80%, 100% { transform: scale(0) }
   40% { transform: scale(1.0) }
 }
+
+
+.spinner-inline {
+
+  $animationDuration: 1s;
+  $delayRange: 0.25s;
+  $spinner-margin: 30px;
+  $size: 25px;
+
+  text-align: center;
+  position: relative;
+  top: -1px;
+  height: 1.25em;
+
+  .ball {
+    width: $size / 2;
+    height: $size / 2;
+    background-color: #fff;
+    border-radius: 100%;
+    display: inline-block;
+    animation: spinnerInlineBalls $animationDuration ease-in-out 0s infinite both;
+  }
+
+  .b-1 { animation-delay: -$delayRange; }
+  .b-2 { animation-delay: -$delayRange / 2; }
+
+  &.vh {
+    position: absolute;
+    height: 1px;
+  }
+
+}
+
+@keyframes spinnerInlineBalls {
+  0%, 80%, 100% {
+    transform: scale(.5);
+    opacity: 0;
+  }
+  40% {
+    transform: scale(.7);
+    opacity: 1;
+  }
+}
