--- a/src/sass/_tables.scss
+++ b/src/sass/_tables.scss
@@ -1,6 +1,7 @@
 table {
   border-top: 1px solid $black;
   border-bottom: 2px solid $black;
+  margin-bottom: 20px;
   th, td {
     vertical-align: top;
   }
