Fix for positioning ‘eye’ icon using safari

--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -86,6 +86,7 @@ div.show-password {
   position: relative;
   input.form-control {
     padding-right: 35px;
+    margin: 0;
   }
   .show-password-control {
     position: absolute;
