Updated notification styles

--- a/src/sass/_notifications.scss
+++ b/src/sass/_notifications.scss
@@ -81,6 +81,11 @@ $warning: $orange;
   border-color: $warning;
 }
 
+.notification-information {
+  border-color: $govuk-blue;
+  background: #fff;
+}
+
 .notification-error {
   border-color: $error-colour;
 }
