Link colour for button-text

--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -181,6 +181,10 @@ div.show-password {
   }
 }
 
+.notification-information .button-text {
+  color: $link-colour;
+}
+
 .submit-buttons {
   .button {
     margin-bottom: 10px;
