Org search reuslts

--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -278,3 +278,16 @@ div.show-password {
   outline: 3px solid #ffbf47;
   outline-offset: 0;
 }
+
+.button-link {
+  border: none;
+  background: none;
+  color: $link-colour;
+  text-decoration: underline;
+  padding: 0;
+  margin: 0;
+  &:hover {
+    color: $link-hover-colour;
+  }
+}
+
