--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -286,6 +286,8 @@ div.show-password {
   text-decoration: underline;
   padding: 0;
   margin: 0;
+  display: inline-block;
+  text-align: left;
   &:hover {
     color: $link-hover-colour;
   }
