--- a/src/sass/pages/_search-results.scss
+++ b/src/sass/pages/_search-results.scss
@@ -1,4 +1,5 @@
 ol.search-results {
+  margin-bottom: 30px;
   li {
     padding: 15px 0;
     margin: 0;
@@ -13,6 +14,9 @@ ol.search-results {
     dl {
       font-size: 16px;
       margin: 0;
+    }
+    &:last-child {
+      border:none
     }
   }
 }
