Pull-left and moved filter boxes into search results

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -64,6 +64,12 @@ aside {
   }
 }
 
+.pull-left {
+  @include media(tablet) {
+    float: left;
+  }
+}
+
 .pull-right {
   @include media(tablet) {
     float: right;
