--- a/src/sass/pages/_search-results.scss
+++ b/src/sass/pages/_search-results.scss
@@ -20,3 +20,47 @@ ol.search-results {
     }
   }
 }
+
+
+.filter-box {
+  background: $grey-3;
+  margin-bottom: 30px;
+  padding: 5px 5px 4px;
+  .option-select-label {
+    font-weight: bold;
+    font-size: 16px;
+    padding: 5px;
+    padding-top: 3px;
+    @include media(tablet) {
+      font-size: 19px;
+    }
+  }
+  .options-container {
+    position: relative;
+    background-color: #fff;
+    overflow-y: auto;
+    overflow-x: hidden;
+    @include media(tablet) {
+      max-height: 200px;
+    }
+    label {
+      display: block;
+      padding: 7px 7px 7px 35px;
+      border-bottom: 1px solid $grey-3;
+      cursor: pointer;
+      margin: 0;
+      @include media(tablet) {
+        font-size: 16px;
+      }
+      &:hover, &:focus {
+        background: $grey-4;
+      }
+    }
+    input {
+      float: left;
+      margin: 2px 0 0 -27px;
+      width: 20px;
+      height: 20px;
+    }
+  }
+}
