--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -76,6 +76,13 @@ aside {
   }
 }
 
+.filter-link {
+  margin-bottom: 15px;
+  @include media(tablet) {
+    margin: 7px 0 15px 0;
+  }
+}
+
 .cards {
   display: flex;
   flex-direction: row;
