--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -297,3 +297,9 @@ div.show-password {
   }
 }
 
+.filter-link {
+  margin-bottom: 15px;
+  @include media(tablet) {
+    margin: 7px 0 15px 0;
+  }
+}
