--- a/src/sass/pages/_search-results.scss
+++ b/src/sass/pages/_search-results.scss
@@ -1,13 +1,18 @@
 ol.search-results {
-  margin-bottom: 30px;
+  border-top: 2px solid $border-color;
+  border-bottom: 2px solid $border-color;
+  margin-bottom: 15px;
   li {
-    padding: 15px 0;
+    padding: 15px;
     margin: 0;
-    border-bottom: 1px solid $border-color;
+    border-bottom: 1px solid $grey-2;
+    &:last-child {
+      border-bottom: none;
+    }
     h2 {
-      margin: 0;
-      .button-link {
-        font-size: inherit;
+      margin-top: 0;
+      margin-bottom: 5px;
+      button {
         font-weight: inherit;
       }
     }
@@ -15,16 +20,34 @@ ol.search-results {
       font-size: 16px;
       margin: 0;
     }
-    &:last-child {
-      border:none
+    span.empty-state {
+      display: inline-block;
+      margin-bottom: 5px;
+    }
+    &.added {
+      background: $grey-4;
+      border: 3px solid $grey-2;
+      border-top-width: 2px;
+      p {
+        border-top: 1px solid $grey-2;
+        margin: 15px -15px -15px;
+        font-size: 15px;
+        padding: 5px 15px;
+      }
     }
   }
 }
 
+.filter-form {
+  margin-bottom: 30px;
+}
 
 .filter-box {
   background: $grey-3;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
+  @include media(tablet) {
+    margin-bottom: 30px;
+  }
   padding: 5px 5px 4px;
   .option-select-label {
     font-weight: bold;
