--- a/app/views/index.html
+++ b/app/views/index.html
@@ -5,44 +5,18 @@
 
 {% block content %}
 
-<div class="grid-row">
-  <div class="col-12">
+    <div class="splash">
 
-    <h1 class="heading-xlarge">
-      Department for Education
-    </h1>
-    <p class="lede">
-      Front-end toolkit and prototypes
-    </p>
+      <h2>Department for Education</h2>
+      <h1>DfE Sign-in</h1>
 
-    <div class="grid-row">
-      <div class="col-6">
-        <h2 class="heading-medium">Journeys</h2>
-        <ul class="list-bullet">
-          <li><a href="/journeys/invite/step1">Invite user journey</a> </li>
-          <li><a href="/journeys/migration/step1">Whitelisted migration journey</a> </li>
-        </ul>
-        <h2 class="heading-medium">Help desk</h2>
-        <ul>
-          <li><a href="/journeys/helpdesk/users-search-results">Users - search results</a> </li>
-        </ul>
-        <h2 class="heading-medium">Concepts</h2>
-        <ul>
-          <li><a href="/concepts/password/strength">Password strength</a> </li>
-        </ul>
+
+      <div class="govuk">
+        <img src="https://assets.publishing.service.gov.uk/static/gov.uk_logotype_crown_invert_trans-203e1db49d3eff430d7dc450ce723c1002542fe1d2bce661b6d8571f14c1043c.png" alt="">
+        GOV.UK
       </div>
-      <div class="col-6">
-        <h2 class="heading-medium">Examples</h2>
-        <ul class="list-bullet">
-          <li><a href="/styles">Components</a> </li>
-        </ul>
-      </div>
+
     </div>
 
-
-
-
-  </div>
-</div>
 
 {% endblock %}
