--- a/src/sass/pages/_search-results.scss
+++ b/src/sass/pages/_search-results.scss
@@ -48,21 +48,47 @@ ol.search-results {
   @include media(tablet) {
     margin-bottom: 30px;
   }
-  padding: 5px 5px 4px;
   .option-select-label {
     font-weight: bold;
     font-size: 16px;
-    padding: 5px;
-    padding-top: 3px;
+    padding: 8px 10px 6px;
     @include media(tablet) {
       font-size: 19px;
     }
+  }
+  button.js-container-head {
+    position: relative;
+    border: none;
+    display: block;
+    width: 100%;
+    text-align: left;
+    cursor: pointer;
+    z-index: 100;
+    padding: 0 30px 0 0;
+    background: $grey-3 url("../images/option-select-toggle-sprite.png") no-repeat right 5px;
+    &:hover, &:focus {
+      background-color: $grey-2;
+      &+.options-container {
+        border-color: $grey-2;
+      }
+    }
+    &.closed {
+      background-position: right -75px;
+    }
+  }
+  .js-selected-counter {
+    padding: 0 10px;
+    position: relative;
+    top: -7px;
+    font-size: 12px;
   }
   .options-container {
     position: relative;
     background-color: #fff;
     overflow-y: auto;
     overflow-x: hidden;
+    border: 5px solid $grey-3;
+    border-top: none;
     @include media(tablet) {
       max-height: 200px;
     }
@@ -77,6 +103,9 @@ ol.search-results {
       }
       &:hover, &:focus {
         background: $grey-4;
+      }
+      &:last-child {
+        border: none;
       }
     }
     input {
