--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -17,6 +17,7 @@
 @import "pages/services";
 @import "pages/search-results";
 @import "pages/splash";
+@import "pages/requests";
 
 html, body {
   background: $grey-3;
