--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -1,3 +1,65 @@
+.global-navigation {
+  border-bottom: 1px solid $border-colour;
+  nav {
+    @include media(1020px) {
+      margin: 0 auto;
+      max-width: 960px
+    }
+  }
+  ul {
+    @extend %contain-floats;
+    list-style: none;
+    position: relative;
+    bottom: -1px;
+    @include media(tablet) {
+      margin: 0 15px;
+    }
+    @include media(1020px) {
+      margin: 0 -15px;
+    }
+  }
+  li {
+    border-bottom: 1px solid $border-colour;
+    position: relative;
+    @include media(tablet) {
+      float: left;
+      &.pull-right {
+        float: right;
+      }
+    }
+  }
+  a {
+    display: block;
+    padding: 8px 15px 6px;
+    text-decoration: none;
+    color: $black;
+    text-decoration: underline;
+    &.current {
+      font-weight: bold;
+      text-decoration: none;
+      &:after {
+        display: block;
+        background: $govuk-blue;
+        content: "";
+        width:5px;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        position: absolute;
+        @include media(tablet) {
+          top: auto;
+          left: 15px;
+          right: 15px;
+          bottom: -1px;
+          width: auto;
+          height: 5px;
+        }
+      }
+    }
+  }
+}
+
+
 .main-nav {
   border-bottom: 1px solid $border-colour;
   nav {
