--- a/src/sass/_tables.scss
+++ b/src/sass/_tables.scss
@@ -75,7 +75,7 @@ th a.sorted {
 
 table.data {
   th, td {
-    font-size: 14px;
+    font-size: 15px;
     line-height: 1.1em;
     padding: 1em 1em .8em 0;
   }
@@ -84,6 +84,17 @@ table.data {
       font-weight: normal;
     }
   }
+}
+
+table tr th:last-child:not(:first-child),
+table tr td:last-child:not(:first-child) {
+  text-align: right;
+  padding: 1em 0 .8em 1em;
+}
+
+tr.pending {
+  color: $grey-1;
+  font-style: italic;
 }
 
 .empty-state {
