--- a/src/sass/pages/_splash.scss
+++ b/src/sass/pages/_splash.scss
@@ -1,12 +1,12 @@
 .splash {
-  margin: 100px auto;
+  margin: 15px auto;
   max-width: 600px;
-  padding: 50px;
-  border: 20px solid $govuk-blue;
+  padding: 30px;
+  border: 10px solid $govuk-blue;
   h1 {
-    font-size: 120px;
+    font-size: 50px;
     font-weight: bold;
-    margin: 0 0 50px 0;
+    margin: 0 0 30px 0;
   }
   .govuk {
     font-weight: bold;
@@ -21,7 +21,24 @@
     }
   }
   h2 {
-    font-size: 30px;
-    margin-top: 50px;
+    font-size: 18px;
+    margin-top: 20px;
+  }
+}
+
+@include media(tablet) {
+  .splash {
+    margin: 100px auto;
+    border: 20px solid $govuk-blue;
+    padding: 50px;
+
+    h1 {
+      font-size: 120px;
+      margin: 0 0 50px 0;
+    }
+    h2 {
+      font-size: 30px;
+      margin-top: 50px;
+    }
   }
 }
